discussion/kv_engine/174669/174669_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add "wait-for-persistence" to rangeScanCreate

Add to the range-scan-create path a "wait-for-persistence" for
feature which allows the clients creation to specify a uuid/seqno
and timeout.

If the vbucket uuid matches and the seqno hasn't been persisted
the command will wait for the timeout (using ewouldblock).

This now means that the range-scan-create path now can perform two
ewouldblock steps.

1) The wait for persistence to be satisfied and notify
2) The wait for RangeScanCreateTask to run and notify

The state that an in-progress range-scan-create is in is now captured
in the state variable which is stored in the engine-specific.

* Pending -  is the initial state
* WaitForPersistence - waiting for SeqnoPersistenceRequest
* Creating - waiting for RangeScanCreateTask

Change-Id: I8090059f16ad4aa8e7768d73fb3f7cdd746ffb6a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-23 09:27:03.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-23 09:58:07.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46308/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_vb.cc(1332): error C2662: "void CookieIface::setEngineStorage(void *)": cannot convert "this" pointer from "const CookieIface" to "CookieIface &" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46308/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17651/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_vb.cc:1332:13: error: "this" argument to member function "setEngineStorage" has type "const CookieIface", but function is not marked const [clang-diagnostic-error]
            cookie->setEngineStorage(nullptr);
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/cookie_iface.h:69:18: note: "setEngineStorage" declared here
    virtual void setEngineStorage(void* value) = 0;
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17651/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_vb.cc:1332:13:
error: "this" argument to member function "setEngineStorage" has type "const CookieIface", but function is not marked const [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17651/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38913/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_vb.cc:1332:13:
error: "this" argument to member function "setEngineStorage" has type "const CookieIface", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38913/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27824/ : FAILURE

Compile error at [2022-05-23T09:57:11.394Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_vb.cc:1332:13:
error: "this" argument to member function "setEngineStorage" has type "const CookieIface", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27824/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19775/ : FAILURE

Compile error at [2022-05-23T09:56:06.469Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_vb.cc:1332:45:
error: passing ?const CookieIface? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19775/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7364/ : FAILURE

Compile error at [2022-05-23T09:48:13.572Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_vb.cc:1332:45:
error: passing ?const CookieIface? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7364/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7263/ : FAILURE

Compile error at [2022-05-23T09:53:31.289Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_vb.cc:1332:13:
error: "this" argument to member function "setEngineStorage" has type "const CookieIface", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7263/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20441/ : FAILURE

Compile error at [2022-05-23T09:55:59.176Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_vb.cc:1332:13:
error: "this" argument to member function "setEngineStorage" has type "const CookieIface", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18627/ : FAILURE

Compile error at [2022-05-23T09:47:57.527Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_vb.cc:1332:13:
error: "this" argument to member function "setEngineStorage" has type "const CookieIface", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18627/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19423/ : FAILURE

Compile error at [2022-05-23T09:54:52.048Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_vb.cc:1332:45:
error: passing ?const CookieIface? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19423/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16677/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-01 10:11:58.000000000
Message: 
Patch Set 11:

No Builds Executed
----------------------------------------------------------------------------------------------------------------------
